--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,8 +26,8 @@
         app:fanColor2="#CDDC39"
         app:fanColor3="#009688"
         android:id="@+id/dialView"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="@dimen/fan_dimen"
+        android:layout_height="@dimen/fan_dimen"
         app:layout_constraintTop_toBottomOf="@+id/customViewLabel"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
